添加单例模式和代理

--- a/设计模式.md
+++ b/设计模式.md
@@ -119,3 +119,51 @@ var timeChunk = function(ary,fn,count) {
     }
 }
 ~~~
+## 设计模式
+
+#### 单例模式: 保证一个类仅有一个实例,并提供一个访问它的全局访问点
++ 通用的惰性单例
+
+~~~
+let getSingle = function(fn) {
+    let result;
+    return function() {
+        return result||(result = fn.apply(this,arguments))
+    }
+}
+~~~
+
+#### 策略模式: 定义一系列的算法,把他们一个个封装起来,并且使他们可以相互替换
+
+#### 代理模式
++ 代理模式实现图片的预加载
+~~~
+var myImage = (function(){
+    var imgNode = document.createElement('img')
+    document.body.appendChild(imgNode)
+
+    return {
+        setSrc: function(src) {
+            imgNode.src = src
+        }
+    }
+})()
+
+var proxyImage = (function(){
+    var img = new Image
+    img.onload = function() {
+        myImage.setSrc(this.src)
+    }
+
+    return {
+        setSrc: function(src) {
+            myImage.setSrc('file:///c:Users/loading.pdf')
+            img.src = src
+        }
+    }
+})()
+
+
+proxyImage.setSrc('http://imgcache.qq.com/music/sad.jpg')
+
+~~~
