添加一些笔记

--- a/设计模式.md
+++ b/设计模式.md
@@ -21,7 +21,7 @@
     + 坏处: 消耗内存,容易造成内存泄漏
     + 可以封装变量(通过返回一个函数或命名空间访问函数内部的变量),延续局部变量的寿命
 + 高阶函数
-    + 函数柯丽话
+    + 函数柯里化，接受一个函数作为参数，并返回一个函数。
 ~~~
 let currying = function(fn) {
     let args = []
@@ -51,16 +51,17 @@ cost()
 ~~~
 
 + 函数节流
+
+
 ~~~
 let throttle = function(fn, interval) {
-            let _self = fn,
-                timer,
+            let timer,
                 firstTime = true;
             return function() {
                 let args = arguments,
                     _me = this;
                 if (firstTime) {
-                    _self.apply(_me, args)
+                    fn.apply(_me, args)
                     return firstTime = false
                 }
                 if (timer) {
@@ -69,7 +70,7 @@ let throttle = function(fn, interval) {
                 timer = setTimeout(function() {
                     clearTimeout(timer)
                     timer = null
-                    _self.apply(_me, args)
+                    fn.apply(_me, args)
                 }, interval || 500)
             }
         }
@@ -77,7 +78,29 @@ let throttle = function(fn, interval) {
         window.onresize = throttle(function() {
             console.log(1)
         }, 500)
-~~~        
+~~~
++ 函数防抖,主要用于搜索，减少服务器的请求
+
+  ```
+  let throttle = function(fn,interval) {
+      let timer
+      
+      return funtion() {
+      	let args = arguments
+         if (timer) {
+          	clearTimerout(timer)
+      	}  
+      	timer = setTimeout(function(){
+          	clearTimeout(timer)
+          	timer = null
+          	fn.apply(this,args)
+      },interval)
+      }
+  }
+  ```
+
+  
+
 + 惰性加载: 可以减少每次函数运行时的`if`条件分支语句的执行
 
 ~~~
@@ -134,10 +157,72 @@ let getSingle = function(fn) {
 ~~~
 
 #### 策略模式: 定义一系列的算法,把他们一个个封装起来,并且使他们可以相互替换
++ 这里用一个动画来表示
 
-#### 代理模式
+```
+var tween = {
+	linear: function(t,b,c,d) {
+		return c*t/d+b
+	},
+	easeIn: function(t,b,c,d) {
+		return c*(t/=d)*t+b
+	},
+	strongEaseIn: function(t,b,c,d) {
+		return C*(t/=d)*t*t*t*t + b
+	},
+	strongEaseOut: function(t,b,c,d) {
+		return c*((t=t/d-1)*t*t*t*t+1)+b
+	},
+	sineaseIn: function(t,b,c,d) {
+		return c*(t/=d)*t*t+b
+	},
+	sinearOut: function(t,b,c,d) {
+		return c*((t=t/d-1)*t*t+1)+b
+	}
+}
+
+var Animate = function() {
+	this.dom = dom
+	this.startTime = 0
+	this.startPos = 0
+	this.endPos = 0
+	this.propertyName = null
+	this.easying = null
+	this.duration = null
+}
+Animate.prototype.start = function(propertyName, endPos, duratiuon, easying) {
+	this.startTime = +new Date()
+	this.startPos = this.dom.getBoundingClientRect()[propertyName]
+	this.propertyName = propertyName
+	this.endPos = endPos
+	this.duration = duration
+	this.easing = tween[easing]
+	var self = this
+	var timeId = setInterval(function(){
+		if(self.step() === false) {
+			clearInterval(timeTd)
+		}
+	},19)
+}
+Animate.prototype.step = function() {
+	var t = +new Date()
+	if(t>=this.startTime+this.duration){
+		this.update(this.endPos)
+		return false
+	}
+	var pos = this.easying(t-this.startTime, this.startPos,this.endPos-this.startPos,this.duration)
+	
+	this.update(pos)
+}
+Animate.prototype.update = function(pos) {
+	this.dom.style[this.propertyName] = pos + 'px'
+}	
+```
+#### 代理模式: 是为一个对象提供一个代用品或占位符,以便控制对它的访问.
 + 代理模式实现图片的预加载
-~~~
+
+
+```
 var myImage = (function(){
     var imgNode = document.createElement('img')
     document.body.appendChild(imgNode)
@@ -166,4 +251,95 @@ var proxyImage = (function(){
 
 proxyImage.setSrc('http://imgcache.qq.com/music/sad.jpg')
 
-~~~
+```
++ 缓存代理
+
+```
+let createProxyFactory = function(fn) {
+	let cache = {}
+	return function() {
+		let args = Array.prototype.join.call(arguments, ',')
+		if(args in cache) {
+			return cache[args]
+		}
+		
+		return cache[args] = fn.apply(this, arguments)
+	}
+}
+```
+#### 迭代器模式
++ 迭代器模式是指一种方法顺序访问一个聚合对象中的各个元素,而又不需要暴露该对象的内部指示.又分为内部迭代器和外部迭代器.
+	+ 内部迭代器: 函数内部定义好了迭代规则,完全接手整个迭代过程
+	+ 外部迭代: 必须显示的请求迭代下一个元素
+	
+```
+// 内部迭代器
+_.each = function(obj, callback) {
+	let value, i = 0, length = obj.length, isArray = isArraylike(obj);
+	
+	if(isArray) {
+		for(; i<length; i++) {
+			value = callback.call(obj[i],i,obj[i])
+			
+			if (value === false) {
+				break
+			}
+		}
+	} else {
+		for(var key in obj) {
+			value = callback.call(obj[i],i,obj[i])
+			if (value === false) {
+				break
+			}
+		}
+	}
+}
+
+// 外部迭代器 类似ec6提供的迭代器模式
+```
+#### 发布-订阅模式(观察者模式)
++ 它定义对象间的一种一对多的依赖关系,当一个对象的状态发生改变时,所有依赖它的对象都将得到通知.优点是可以达到时间上的解耦和对象之间的解耦.缺点是需要消耗一定的时间和内存.
+
+```
+let event = {
+	clientList: [],
+	listen: function(type, fn) {
+		if(!this.clientList[type]) {
+			this.clientList[type] = []
+		}
+		this.clientList[type].push(fn)
+	},
+	trigger: function() {
+		let type = Array.prototype.shift.call(arguments),
+			fns = this.clientList[type]
+			
+			if(!fns||fns.length === 0) {
+				return false
+			}
+			
+			for(let i=0,fn;fn=fns[i++]) {
+				fn.apply(this, arguments)
+			}
+	},
+	remove: function(type, fn) {
+		let fns = this.clientList[type]
+		
+		if(!fns) {
+			return false
+		}
+		if (!fn) {
+			fns&&(fns.length = 0)
+		} else {
+			for (let i = fns.length-1; i>=0; i--) {
+				let _fn = fns[i]
+				if(_fn === fn) {
+					fns.splice(i,1)
+				}
+			}
+		}
+	}
+}
+```
+
+
+​	
